# gluco-hub-rs

./: .dockerignore  .editorconfig  .env.example  .gitignore  .grype.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Containerfile  DISCLAIMER.md  Dockerfile  README.md  SECURITY.md  Taskfile.yml  compose.example.yml  config.example.toml  deny.toml  release.toml  renovate.json  rust-toolchain.toml  zizmor.yml
.claude/: settings.json
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS
.github/workflows/: ci.yml  deny.yml  release.yml  renovate.yml
cgm-bridge/: Cargo.toml
cgm-bridge-core/: Cargo.toml
cgm-bridge-core/src/: cache.rs  error.rs  lib.rs  mock.rs  model.rs  sink.rs  source.rs
cgm-bridge/src/: config.rs  e2e_tests.rs  main.rs  metrics.rs
cgm-bridge/src/api/: auth.rs  glucose.rs  health.rs  metrics.rs  mod.rs
cgm-bridge/src/sinks/: mod.rs
cgm-bridge/src/sinks/mqtt/: error.rs  mod.rs  sink.rs  wire.rs
cgm-bridge/src/sinks/nightscout/: client.rs  mod.rs  sink.rs  wire.rs
cgm-bridge/src/sources/: mod.rs
cgm-bridge/src/sources/llu/: auth.rs  error.rs  headers.rs  mapping.rs  mod.rs  region.rs  source.rs  wire.rs
docs/: ARCHITECTURE.md  EXTENDING.md  OPERATIONS.md  V3_VALIDATION.md  VERIFICATION.md
docs/ci/: ci-workflow.yml  deny-workflow.yml
docs/superpowers/plans/: 2026-05-13-dlq-e2e-tests.md
gluco-hub/: Cargo.toml
gluco-hub-core/: Cargo.toml
gluco-hub-core/src/: cache.rs  error.rs  lib.rs  mock.rs  model.rs  sink.rs  source.rs
gluco-hub/src/: config.rs  dlq.rs  e2e_tests.rs  main.rs  metrics.rs  poll_status.rs  sink_router.rs
gluco-hub/src/api/: auth.rs  clock.html  clock.rs  glucose.rs  health.rs  metrics.rs  mod.rs  status.rs
gluco-hub/src/integration_tests/: mod.rs  mqtt.rs  multi_sink.rs  nightscout.rs
gluco-hub/src/integration_tests/common/: ha_schema.rs  mod.rs  mosquitto.rs  nightscout_container.rs
gluco-hub/src/sinks/: mod.rs
gluco-hub/src/sinks/mqtt/: discovery.rs  error.rs  mod.rs  sink.rs  stats.rs  tailscale.rs  wire.rs
gluco-hub/src/sinks/nightscout/: client.rs  mod.rs  sink.rs  wire.rs
gluco-hub/src/sources/: mod.rs
gluco-hub/src/sources/llu/: auth.rs  error.rs  headers.rs  mapping.rs  mod.rs  region.rs  source.rs  wire.rs
gluco-hub/src/sources/ns_socket/: client.rs  error.rs  mod.rs  source.rs
gluco-hub/tests/e2e/clock/: .gitignore  README.md  clock.spec.mjs  clockUrl.unit.test.mjs  mock-server-factory.mjs  mock-server.mjs  package-lock.json  package.json  playwright.config.mjs
gluco-hub/tests/fixtures/: nightscout-compose.yml
scripts/: _dryrun-common.sh  full-dryrun.sh  llu-dryrun.sh  ns-dryrun.sh  smoke.sh
