[package]
name = "cgm-bridge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Domain types and traits for cgm-bridge."

[features]
mock-source = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
