[package]
name = "cgm-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "cgm-bridge binary: polls LibreLink Up, exposes glucose via HTTP, pushes to Nightscout."

[features]
default = ["mock-source"]
source-llu = ["dep:sha2"]
sink-nightscout = []
# Enables the in-memory `MockSource` fixture so the HTTP API can be
# exercised end-to-end before the LibreLink Up source lands.
mock-source = ["cgm-bridge-core/mock-source"]

[dependencies]
cgm-bridge-core = { path = "../cgm-bridge-core" }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }

axum = { workspace = true }
reqwest = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

config = { workspace = true }
secrecy = { workspace = true }
validator = { workspace = true }

clap = { workspace = true }
tempfile = { workspace = true }

# Optional, only pulled in by `source-llu`.
sha2 = { workspace = true, optional = true }

[dev-dependencies]
wiremock = { workspace = true }
http-body-util = "0.1"
