[package]
name = "cgm-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "cgm-bridge binary: polls LibreLink Up, exposes glucose via HTTP, pushes to Nightscout."
# Binary crate — never published to crates.io. Marking explicitly so
# `cargo deny check bans` accepts the path dependency on
# cgm-bridge-core without flagging it as a wildcard-on-public-crate.
publish = false

[features]
default = ["mock-source"]
source-llu = ["dep:sha2"]
sink-nightscout = ["dep:sha1"]
# V2 placeholder. Enables the `MqttSink` trait stub so the binary
# compiles with a typed Sink for MQTT, but every push returns
# `[MQTT001]` until the real `rumqttc`-backed implementation lands.
sink-mqtt = []
# Enables the in-memory `MockSource` fixture so the HTTP API can be
# exercised end-to-end before the LibreLink Up source lands.
mock-source = ["cgm-bridge-core/mock-source"]

[dependencies]
cgm-bridge-core = { path = "../cgm-bridge-core" }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

axum = { workspace = true }
reqwest = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

config = { workspace = true }
secrecy = { workspace = true }
validator = { workspace = true }

clap = { workspace = true }
tempfile = { workspace = true }
subtle = { workspace = true }

# Optional, only pulled in by their respective features.
sha2 = { workspace = true, optional = true }
sha1 = { workspace = true, optional = true }

[dev-dependencies]
wiremock = { workspace = true }
http-body-util = "0.1"
