[package]
name = "gluco-hub"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "gluco-hub-rs binary: polls LibreLink Up, exposes glucose via HTTP, pushes to Nightscout."
# Binary crate — never published to crates.io. Marking explicitly so
# `cargo deny check bans` accepts the path dependency on
# gluco-hub-core without flagging it as a wildcard-on-public-crate.
publish = false

[features]
default = ["source-llu", "sink-nightscout"]
source-llu = ["dep:sha2"]
# V6 scaffold: Nightscout-as-a-source via Socket.IO. Standalone alternative
# to LLU. No new runtime deps yet — the connect/subscribe loop is stubbed
# (returns [NSS001]). When implemented it will add a rustls-based Socket.IO
# client (candidate: rust-socketio), pending `cargo deny check`.
source-ns-socket = []
sink-nightscout = ["dep:sha1"]
# V2: real MQTT v5 sink backed by rumqttc + rustls. Pulls in the
# rumqttc client, the bytes crate (LastWill payload), and tokio-util
# (CancellationToken for graceful shutdown). Also pulls in rustls-pemfile
# and rustls-native-certs for mTLS client certificate support.
sink-mqtt = ["dep:rumqttc", "dep:bytes", "dep:tokio-util", "dep:rustls-pemfile", "dep:rustls-native-certs"]
# Enables the in-memory `MockSource` fixture so the HTTP API can be
# exercised end-to-end before the LibreLink Up source lands.
mock-source = ["gluco-hub-core/mock-source"]
# Container-backed integration tests (V3+) — gated behind a feature
# flag so they don't slow down every `cargo test`. CI runs them on
# PRs against `main` only; local `task test-all` ignores them.
# Requires Docker on the test host.
integration-tests = ["sink-mqtt", "sink-nightscout", "mock-source"]

[dependencies]
gluco-hub-core = { path = "../gluco-hub-core" }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

axum = { workspace = true }
reqwest = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

config = { workspace = true }
secrecy = { workspace = true }
validator = { workspace = true }

clap = { workspace = true }
tempfile = { workspace = true }
subtle = { workspace = true }

# Optional, only pulled in by their respective features.
sha2 = { workspace = true, optional = true }
sha1 = { workspace = true, optional = true }
rumqttc = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
rustls-pemfile = { version = "2", optional = true }
rustls-native-certs = { version = "0.8", optional = true }

[dev-dependencies]
wiremock = { workspace = true }
http-body-util = "=0.1.3"

# Container-backed integration tests (gated by `integration-tests`
# feature flag — see [features]). testcontainers spins up real
# Mosquitto / Nightscout / MongoDB instances; the wiremock-based
# E2E tests in src/e2e_tests.rs stay as the fast path.
testcontainers = { version = "=0.27.3", features = ["docker-compose"] }
testcontainers-modules = { version = "=0.15.0", features = ["mongo"] }
uuid = { version = "=1.23.2", features = ["v4"] }

# `cargo release` rewrites the workspace CHANGELOG.md from this crate
# (the binary). The library crate inherits no replacements, so the
# rewrite runs once. `file = "../CHANGELOG.md"` resolves to the repo
# root from the binary's manifest dir.
#
# The pre-release-hook also lives here (scoped to one crate so the gate
# runs once). `task check` requires the workspace-root Taskfile.yml,
# hence the `cd` via `git rev-parse --show-toplevel`.
#
# Note: `{{prev_version}}` and `{{version}}` are substituted only in
# `replace`, not in `search`. The version regex `v[\w.-]+` matches any
# SemVer including pre-release suffixes (e.g. `0.1.0-rc.1`).
[package.metadata.release]
# Local pre-release gate. Matches what CI's regular `test` job runs on every
# push/PR (fmt + clippy + production-feature tests, mirroring the matrix in
# ci.yml). The container-backed `integration-tests` feature is intentionally
# excluded — that lane only runs in CI on PRs targeting main and requires a
# Docker daemon, which the release operator's machine isn't expected to provide.
pre-release-hook = ["sh", "-c", "cd \"$(git rev-parse --show-toplevel)\" && task lint && cargo test --locked --features \"source-llu sink-nightscout sink-mqtt mock-source\""]
# Inline tables MUST be on one line per TOML 1.0 (cargo-chef parses strictly,
# cargo itself is lenient). Keep each replacement on a single line.
pre-release-replacements = [
    { file = "../CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] - {{date}}", exactly = 1 },
    { file = "../CHANGELOG.md", search = "\\[Unreleased\\]: https://github\\.com/micschr0/gluco-hub-rs/compare/v[\\w.-]+\\.\\.\\.HEAD", replace = "[Unreleased]: https://github.com/micschr0/gluco-hub-rs/compare/v{{version}}...HEAD\n[{{version}}]: https://github.com/micschr0/gluco-hub-rs/compare/v{{prev_version}}...v{{version}}", exactly = 1 },
]
